--- a/app.css
+++ b/app.css
@@ -68,18 +68,23 @@ li:hover i.fa-trash {
   opacity: 1;
 }
 
-@keyframes animations {
+/*Wrong*/
+@keyframes header-animations {
   0% {
-    animation-name: swing;
+    color: yellow;
+    left: 0px;
+    bottom: 100px;
   }
   50% {
-    animation-name: tada;
+    color: blue;
+    bottom: 0px;
   }
   100% {
-    animation-name: jello;
+    color: white;
+    left: 500px;
   }
 }
 
 .page-header {
-  
+  animation-name: header-animations 4s infinite;
 }
